feat: FCM 푸시 알림 기능 추가
- Firebase Admin SDK를 사용한 FCM 알림 전송 모듈 추가 (fcm_notifier.py)
- 크롤링 완료 후 자동으로 FCM 알림 전송 (menu_updates 토픽)
- GitHub Actions에 FIREBASE_SERVICE_ACCOUNT_KEY 환경변수 추가
- firebase-admin 의존성 추가

--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -33,5 +33,6 @@ jobs:
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         working-directory: crawl
         run: python main.py
