--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -30,9 +30,38 @@ jobs:
         run: playwright install chromium --with-deps
 
       - name: Run crawler
+        id: crawler
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           FIREBASE_SERVICE_ACCOUNT_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}
         working-directory: crawl
         run: python main.py
+
+      - name: Discord notification (Success)
+        if: success()
+        run: |
+          curl -H "Content-Type: application/json" \
+            -d '{
+              "embeds": [{
+                "title": "✅ 크롤링 성공",
+                "description": "부경대 학식 메뉴 크롤링이 완료되었습니다.",
+                "color": 5763719,
+                "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%SZ)'"
+              }]
+            }' \
+            ${{ secrets.DISCORD_WEBHOOK_URL }}
+
+      - name: Discord notification (Failure)
+        if: failure()
+        run: |
+          curl -H "Content-Type: application/json" \
+            -d '{
+              "embeds": [{
+                "title": "❌ 크롤링 실패",
+                "description": "크롤링 중 오류가 발생했습니다.\n[로그 확인](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})",
+                "color": 15548997,
+                "timestamp": "'$(date -u +%Y-%m-%dT%H:%M:%SZ)'"
+              }]
+            }' \
+            ${{ secrets.DISCORD_WEBHOOK_URL }}
